# rustdb

./: Cargo.toml  README.md  SCHEMA.md
examples/: basic.rs  invalid_schema.rs  product_schema.rs
src/: error.rs  lib.rs  schema.rs  storage.rs
