[package]
name = "rust_db"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
crossbeam = "0.8"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
lazy_static = "1.4"
log = "0.4"
pretty_env_logger = "0.5"
memmap = "0.7"
chrono = { version = "0.4", features = ["serde"] }
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"